--- a/src/renderer/components/Home/index.less
+++ b/src/renderer/components/Home/index.less
@@ -7,27 +7,26 @@
   background-color: @background-color;
   border-radius: @borderRadius;
 
+  display: flex;
+  flex-direction: column;
 
-  &__content {
-    height: 100%;
+  &__main {
+    flex: 1;
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
   }
 
-  &__logo {
+  &__sidebar {
+    min-width: 180px;
     width: 180px;
-
-    &-container {
-      margin-top: -90px;
-      margin-bottom: 48px;
-    }
+    height: 100%;
   }
 
-  &__title {
-    font-size: 32px;
-    font-weight: bold;
-    margin-bottom: 24px;
+  &__content {
+    flex: 1;
+    height: 100%;
+    overflow-y: auto;
+    padding: 16px 24px;
+    box-sizing: border-box;
   }
 }
