--- a/src/renderer/styles/common.less
+++ b/src/renderer/styles/common.less
@@ -9,7 +9,9 @@
 
 @font-family: 'FangYuanTiVF-Thin';
 @color-primary: rgb(var(--primary-6));
+@color-success: rgb(var(--green-6));
 @color-error: rgb(var(--red-5));
+@color-gray: var(--color-neutral-4);
 @color-hover: rgba(22, 22, 22, 0.72);
 @background-color: rgba(var(--color-rgb-255), 0.95);
 @borderRadius: 8px;
