--- a/src/renderer/components/TTS/index.less
+++ b/src/renderer/components/TTS/index.less
@@ -24,8 +24,10 @@
 
   &__right {
     margin-left: @gap;
+    padding: 12px 18px;
     width: 180px;
     height: 100%;
+    box-sizing: border-box;
     background-color: @background-color;
   }
 
