--- a/src/renderer/components/Home/index.less
+++ b/src/renderer/components/Home/index.less
@@ -30,4 +30,9 @@
     padding: 16px 24px;
     box-sizing: border-box;
   }
+
+  &__custom-container {
+    height: 18px;
+    margin-right: 12px;
+  }
 }
