--- a/src/renderer/components/MenuBar/index.less
+++ b/src/renderer/components/MenuBar/index.less
@@ -4,7 +4,7 @@
   width: 100%;
   height: 40px;
   padding: 0 20px 0 12px;
-  background-color: rgb(var(--color-rgb-255));
+  background-color: @background-color;
   -webkit-app-region: drag;
   box-sizing: border-box;
 
