--- a/src/renderer/styles/common.less
+++ b/src/renderer/styles/common.less
@@ -8,13 +8,19 @@
 }
 
 @font-family: 'FangYuanTiVF-Thin';
+
 @color-primary: rgb(var(--primary-6));
 @color-success: rgb(var(--green-6));
 @color-error: rgb(var(--red-5));
 @color-gray: var(--color-neutral-4);
 @color-hover: rgba(22, 22, 22, 0.72);
+
 @background-color: rgba(var(--color-rgb-255), 0.95);
+@background-color--sub: rgba(var(--gray-1));
+
 @borderRadius: 8px;
+@gap: 12px;
+@pointSize: 6px;
 
 body {
   font-family: @font-family;
