--- a/src/renderer/components/Settings/index.less
+++ b/src/renderer/components/Settings/index.less
@@ -6,14 +6,19 @@
   padding: 0 @gap @gap;
   box-sizing: border-box;
   display: flex;
+  justify-content: center;
   align-items: center;
   overflow: hidden;
   background-color: @background-color;
 
-  &__content {
+  &__form {
+    width: 480px;
+    max-width: 480px;
+    padding: @gap;
     flex: 1;
     height: 100%;
     border-radius: @borderRadius;
     background-color: @background-color--sub;
+    box-sizing: border-box;
   }
 }
