feat: change platform

--- a/src/renderer/components/TTS/index.less
+++ b/src/renderer/components/TTS/index.less
@@ -27,6 +27,9 @@
     box-sizing: border-box;
     border-radius: @borderRadius;
     background-color: @background-color--sub;
+    overflow-x: hidden;
+    overflow-y: auto;
+    .scroll-bar();
   }
 
   &__content {
