--- a/src/renderer/styles/common.less
+++ b/src/renderer/styles/common.less
@@ -11,6 +11,7 @@
 
 @color-primary: rgb(var(--primary-6));
 @color-success: rgb(var(--green-6));
+@color-warning: rgb(var(--yellow-6));
 @color-error: rgb(var(--red-5));
 @color-gray: var(--color-neutral-4);
 @color-hover: rgba(22, 22, 22, 0.72);
